--- a/style.css
+++ b/style.css
@@ -12,24 +12,44 @@ html, body {
   transform: translate(-50%, -50%);
 }
 
-.center-text {
-  text-align: center;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-text {
+  color: rgba(255, 255, 255, 0.5);
+  /* text-align: center; */
+  font-size: 30px;
   font-family: 'DM Serif Display', serif;
+  font-weight: 400;
+  margin-bottom: 20px;
+  margin-left: 5px;
 }
 
 .flex-container {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   gap:20px;
 }
 
 .circle {
-  width: 80px;
-  height: 80px;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  background: gray;
+  width: 150px;
+  height: 150px;
+  -webkit-border-radius: 75px;
+  -moz-border-radius: 75px;
+  border-radius: 75px;
+  backdrop-filter:blur(20px);
+  -o-backdrop-filter:blur(20px);
+  -ms-backdrop-filter:blur(20px);
+  -moz-backdrop-filter:blur(20px);
+  -webkit-backdrop-filter:blur(20px);
+  background:rgba(255, 255, 255, 0.07);
+}
+
+.circle:hover {
+  background:rgba(255, 255, 255, 0.2);
 }
 
 canvas {
