--- a/style.css
+++ b/style.css
@@ -5,22 +5,24 @@ html, body {
   border: 0;
 }
 
-.center-block {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.outer-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.header {
+.center-block {
+  margin-left: 50px;
+  margin-right: 50px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .header-text {
   color: rgba(255, 255, 255, 0.5);
-  /* text-align: center; */
   font-size: 30px;
   font-family: 'DM Serif Display', serif;
   font-weight: 400;
@@ -29,17 +31,18 @@ html, body {
 }
 
 .flex-container {
-  display: flex;
+  width: auto;
+  display: inline-flex;
   flex-wrap: wrap;
-  gap:20px;
+  gap: 20px;
 }
 
 .circle {
   width: 150px;
   height: 150px;
-  -webkit-border-radius: 75px;
-  -moz-border-radius: 75px;
-  border-radius: 75px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
   backdrop-filter:blur(20px);
   -o-backdrop-filter:blur(20px);
   -ms-backdrop-filter:blur(20px);
